scrollbar pixels fixed (#8731)

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -46,7 +46,7 @@
 
 #stream_filters {
     overflow: visible;
-    margin: 2px 0px 22px 0px;
+    margin: 0px 0px 22px 0px;
     padding: 0;
     font-weight: normal;
 }
